external-crates/move/crates/move-compiler/tests/move_2024/parser/named_blocks_invalid.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E03009]: unbound variable
  ┌─ tests/move_2024/parser/named_blocks_invalid.move:4:9
  │
4 │         name: {
  │         ^^^^ Unbound variable 'name'

error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/named_blocks_invalid.move:4:13
  │
4 │         name: {
  │             ^
  │             │
  │             Unexpected ':'
  │             Expected ';'
